--- a/latex_src/index.tex
+++ b/latex_src/index.tex
@@ -308,172 +308,182 @@
 
 \hangindent=3pc \hangafter=1 blank line, printing a (打印一个空行) 11, 55
 
-\hangindent=3pc \hangafter=1 blank line separator 83
+\hangindent=3pc \hangafter=1 blank line separator (空行分隔符) 83
 
-\hangindent=3pc \hangafter=1 boundary condition testing 155
+\hangindent=3pc \hangafter=1 boundary condition testing (边界条件测试) 155
 
-\hangindent=3pc \hangafter=1 braces, \verb'{'...\verb'}' 15,22,47, 167, 188
+\hangindent=3pc \hangafter=1 braces, \verb'{'...\verb'}' (花括号) 15,22,47, 167, 188
 
-\hangindent=3pc \hangafter=1 breadth-first order 163, 171
+\hangindent=3pc \hangafter=1 breadth-first order (宽度优先顺序) 163, 171
 
-\hangindent=3pc \hangafter=1 \verb'break' statement 49
+\hangindent=3pc \hangafter=1 \verb'break' statement (\verb'break' 语句) 49
 
-\hangindent=3pc \hangafter=1 \verb'bridge' program 199
+\hangindent=3pc \hangafter=1 \verb'bridge' program (程序 \verb'bridge') 199
 
-\hangindent=3pc \hangafter=1 built-in variables, table of 36
+\hangindent=3pc \hangafter=1 built-in variables, table of (内建变量表格) 36
 
-\hangindent=3pc \hangafter=1 \verb'bundle' program 81
+\hangindent=3pc \hangafter=1 \verb'bundle' program (程序 \verb'bundle') 81
 
-\hangindent=3pc \hangafter=1 \verb'calc1' program 143
+\hangindent=3pc \hangafter=1 \verb'calc1' program (程序 \verb'calc1') 143
 
-\hangindent=3pc \hangafter=1 \verb'calc2' program 144
+\hangindent=3pc \hangafter=1 \verb'calc2' program (程序 \verb'calc2') 144
 
-\hangindent=3pc \hangafter=1 \verb'calc3' program 146
+\hangindent=3pc \hangafter=1 \verb'calc3' program (程序 \verb'calc3') 146
 
-\hangindent=3pc \hangafter=1 call by reference 54
+\hangindent=3pc \hangafter=1 call by reference (引用传递) 54
 
-\hangindent=3pc \hangafter=1 call by value 54
+\hangindent=3pc \hangafter=1 call by value (值传递) 54
 
-\hangindent=3pc \hangafter=1 \verb'capitals' file 102
+\hangindent=3pc \hangafter=1 \verb'capitals' file (文件 \verb'capitals') 102
 
-\hangindent=3pc \hangafter=1 \verb'cat' command 59, 64
+\hangindent=3pc \hangafter=1 \verb'cat' command (命令 \verb'cat') 59, 64
 
-\hangindent=3pc \hangafter=1 \verb'cc' command 175
+\hangindent=3pc \hangafter=1 \verb'cc' command (命令 \verb'cc') 175
 
-\hangindent=3pc \hangafter=1 changing \verb'ARGV' 64-65, 116
+\hangindent=3pc \hangafter=1 changing \verb'ARGV' (修改 \verb'ARGV') 64-65, 116
 
-\hangindent=3pc \hangafter=1 character class, \verb'-' in 29
+\hangindent=3pc \hangafter=1 character class, \verb'-' in (字符集) 29
 
-\hangindent=3pc \hangafter=1 character class, complemented 29
+\hangindent=3pc \hangafter=1 character class, complemented (互补字符集) 29
 
-\hangindent=3pc \hangafter=1 character class, regular expression 29
+\hangindent=3pc \hangafter=1 character class, regular expression
+(正则表达式中的字符集) 29
 
-\hangindent=3pc \hangafter=1 characters, table of escape 31
+\hangindent=3pc \hangafter=1 characters, table of escape (转义字符表格) 31
 
-\hangindent=3pc \hangafter=1 \verb'check' function 155
+\hangindent=3pc \hangafter=1 \verb'check' function (函数 \verb'check') 155
 
-\hangindent=3pc \hangafter=1 check \verb'password' file 78
+\hangindent=3pc \hangafter=1 check password file (检查密码文件) 78
 
-\hangindent=3pc \hangafter=1 \verb'check1' program 87
+\hangindent=3pc \hangafter=1 \verb'check1' program (程序 \verb'check1') 87
 
-\hangindent=3pc \hangafter=1 \verb'check2' program 87
+\hangindent=3pc \hangafter=1 \verb'check2' program (程序 \verb'check2') 87
 
-\hangindent=3pc \hangafter=1 \verb'check3' program 88
+\hangindent=3pc \hangafter=1 \verb'check3' program (程序 \verb'check3') 88
 
-\hangindent=3pc \hangafter=1 \verb'checkgen' program 79
+\hangindent=3pc \hangafter=1 \verb'checkgen' program (程序 \verb'checkgen') 79
 
-\hangindent=3pc \hangafter=1 checking, cross-reference 73
+\hangindent=3pc \hangafter=1 checking, cross-reference (交叉引用检查) 73
 
-\hangindent=3pc \hangafter=1 checks and deposits, add 87
+\hangindent=3pc \hangafter=1 checks and deposits, add (累加支出与存款) 87
 
-\hangindent=3pc \hangafter=1 checks, printing 74
+\hangindent=3pc \hangafter=1 checks, printing (打印支票) 74
 
 \hangindent=3pc \hangafter=1 Cherry, L. L. vi
 
-\hangindent=3pc \hangafter=1 \verb'chmod' command 65
+\hangindent=3pc \hangafter=1 \verb'chmod' command (命令 \verb'chmod') 65
 
-\hangindent=3pc \hangafter=1 \verb'choose' function 112
+\hangindent=3pc \hangafter=1 \verb'choose' function (命令 \verb'choose') 112
 
-\hangindent=3pc \hangafter=1 \verb'cliche' program 113
+\hangindent=3pc \hangafter=1 \verb'cliche' program (程序 \verb'cliche') 113
 
-\hangindent=3pc \hangafter=1 \verb'close' statement 59, 82
+\hangindent=3pc \hangafter=1 \verb'close' statement (\verb'close' 语句) 59, 82
 
-\hangindent=3pc \hangafter=1 coercion 44, 154, 182
+\hangindent=3pc \hangafter=1 coercion (强制类型转换) 44, 154, 182
 
-\hangindent=3pc \hangafter=1 coercion, number to string 25
+\hangindent=3pc \hangafter=1 coercion, number to string
+(数值强制转换成字符串) 25
 
-\hangindent=3pc \hangafter=1 coercion rules 44, 192
+\hangindent=3pc \hangafter=1 coercion rules (强制类型转换的规则) 44, 192
 
-\hangindent=3pc \hangafter=1 coercion, string to number 25
+\hangindent=3pc \hangafter=1 coercion, string to number
+(字符串强制转换成数值) 25
 
-\hangindent=3pc \hangafter=1 coercion to number 45
+\hangindent=3pc \hangafter=1 coercion to number (强制转换成数值) 45
 
-\hangindent=3pc \hangafter=1 coercion to string 45
+\hangindent=3pc \hangafter=1 coercion to string (强制转换成字符串) 45
 
-\hangindent=3pc \hangafter=1 \verb'colcheck' program 77
+\hangindent=3pc \hangafter=1 \verb'colcheck' program (程序 \verb'colcheck') 77
 
-\hangindent=3pc \hangafter=1 columns, summing 67
+\hangindent=3pc \hangafter=1 columns, summing (列求和) 67
 
-\hangindent=3pc \hangafter=1 command, \verb'cat' 59, 64
+\hangindent=3pc \hangafter=1 command, \verb'cat' (命令 \verb'cat') 59, 64
 
-\hangindent=3pc \hangafter=1 command, \verb'cc' 175
+\hangindent=3pc \hangafter=1 command, \verb'cc' (命令 \verb'cc') 175
 
-\hangindent=3pc \hangafter=1 command, \verb'chmod' 65
+\hangindent=3pc \hangafter=1 command, \verb'chmod' (命令 \verb'chmod') 65
 
-\hangindent=3pc \hangafter=1 command, \verb'date' 62, 76
+\hangindent=3pc \hangafter=1 command, \verb'date' (命令 \verb'date') 62, 76
 
-\hangindent=3pc \hangafter=1 command, \verb'egrep' 59, 181, 184,  186
+\hangindent=3pc \hangafter=1 command, \verb'egrep' (命令 \verb'egrep')
+59, 181, 184,  186
 
-\hangindent=3pc \hangafter=1 command, \verb'grep' v, 181, 184
+\hangindent=3pc \hangafter=1 command, \verb'grep' (命令 \verb'grep') v, 181, 184
 
-\hangindent=3pc \hangafter=1 command interpreter, shell 4, 65,  99
+\hangindent=3pc \hangafter=1 command interpreter, shell (命令解释器 shell)
+4, 65,  99
 
-\hangindent=3pc \hangafter=1 command, \verb'join' 104
+\hangindent=3pc \hangafter=1 command, \verb'join' (命令 \verb'join') 104
 
-\hangindent=3pc \hangafter=1 command line, \verb'awk' 1, 3, 63, 65, 187
+\hangindent=3pc \hangafter=1 command line, \verb'awk' (awk 的命令行) 1, 3, 63, 65, 187
 
-\hangindent=3pc \hangafter=1 command, \verb'lorder' 170
+\hangindent=3pc \hangafter=1 command, \verb'lorder' (命令 \verb'lorder') 170
 
-\hangindent=3pc \hangafter=1 command, \verb'ls' 177
+\hangindent=3pc \hangafter=1 command, \verb'ls' (命令 \verb'ls') 177
 
-\hangindent=3pc \hangafter=1 command, \verb'make' 175
+\hangindent=3pc \hangafter=1 command, \verb'make' (命令 \verb'make') 175
 
-\hangindent=3pc \hangafter=1 command, \verb'nm' 73
+\hangindent=3pc \hangafter=1 command, \verb'nm' (命令 \verb'nm') 73
 
-\hangindent=3pc \hangafter=1 command, \verb'pr' 175
+\hangindent=3pc \hangafter=1 command, \verb'pr' (命令 \verb'pr') 175
 
-\hangindent=3pc \hangafter=1 command, \verb'ptx' 123
+\hangindent=3pc \hangafter=1 command, \verb'ptx' (命令 \verb'ptx') 123
 
-\hangindent=3pc \hangafter=1 command, \verb'sed' v, 181, 184, 186
+\hangindent=3pc \hangafter=1 command, \verb'sed' (命令 \verb'sed') 
+v, 181, 184, 186
 
-\hangindent=3pc \hangafter=1 command, \verb'sort' 8, 58, 84, 90
+\hangindent=3pc \hangafter=1 command, \verb'sort' (命令 \verb'sort') 8, 58, 84, 90
 
-\hangindent=3pc \hangafter=1 command, \verb'tbl' 95
+\hangindent=3pc \hangafter=1 command, \verb'tbl' (命令 \verb'tbl') 95
 
-\hangindent=3pc \hangafter=1 command, \verb'tr' 201
+\hangindent=3pc \hangafter=1 command, \verb'tr' (命令 \verb'tr') 201
 
-\hangindent=3pc \hangafter=1 command, \verb'troff' 120, 124-125, 127, 139
+\hangindent=3pc \hangafter=1 command, \verb'troff' (命令 \verb'troff')
+120, 124-125, 127, 139
 
-\hangindent=3pc \hangafter=1 command, \verb'wc' 183
+\hangindent=3pc \hangafter=1 command, \verb'wc' (命令 \verb'wc') 183
 
 
-\hangindent=3pc \hangafter=1 command, \verb'who' 62
+\hangindent=3pc \hangafter=1 command, \verb'who' (命令 \verb'who') 62
 
-\hangindent=3pc \hangafter=1 command-line arguments 63
+\hangindent=3pc \hangafter=1 command-line arguments (命令行参数) 63
 
-\hangindent=3pc \hangafter=1 command-line assignment 63, 94, 187, 195, 197
+\hangindent=3pc \hangafter=1 command-line assignment (命令行赋值)
+63, 94, 187, 195, 197
 
-\hangindent=3pc \hangafter=1 commas, inserting 71
+\hangindent=3pc \hangafter=1 commas, inserting (插入逗号) 71
 
-\hangindent=3pc \hangafter=1 comment, \verb'#' 15, 22, 188
+\hangindent=3pc \hangafter=1 comment, \verb'#' (注释) 15, 22, 188
 
-\hangindent=3pc \hangafter=1 comparison expression, value of 37
+\hangindent=3pc \hangafter=1 comparison expression, value of
+(比较表达式的值) 37
 
-\hangindent=3pc \hangafter=1 comparison, numeric 25-26, 44
+\hangindent=3pc \hangafter=1 comparison, numeric (数值比较) 25-26, 44
 
-\hangindent=3pc \hangafter=1 comparison operator, \verb'>' 9
+\hangindent=3pc \hangafter=1 comparison operator, \verb'>' (比较运算符) 9
 
-\hangindent=3pc \hangafter=1 comparison operator, \verb'>=' 9
+\hangindent=3pc \hangafter=1 comparison operator, \verb'>=' (比较运算符) 9
 
-\hangindent=3pc \hangafter=1 comparison operator, \verb'==' 9, 44
+\hangindent=3pc \hangafter=1 comparison operator, \verb'==' (比较运算符) 9, 44
 
-\hangindent=3pc \hangafter=1 comparison operators 36
+\hangindent=3pc \hangafter=1 comparison operators (比较运算符) 36
 
-\hangindent=3pc \hangafter=1 comparison operators, table of 25
+\hangindent=3pc \hangafter=1 comparison operators, table of (比较运算符表格) 25
 
-\hangindent=3pc \hangafter=1 comparison, string 25-26, 44, 184
+\hangindent=3pc \hangafter=1 comparison, string (字符串的比较) 25-26, 44, 184
 
-\hangindent=3pc \hangafter=1 \verb'compat' program 80
+\hangindent=3pc \hangafter=1 \verb'compat' program (程序 \verb'compat') 80
 
-\hangindent=3pc \hangafter=1 compiler model 131
+\hangindent=3pc \hangafter=1 compiler model (编译器型) 131
 
-\hangindent=3pc \hangafter=1 complemented character class 29
+\hangindent=3pc \hangafter=1 complemented character class (互补字符集) 29
 
-\hangindent=3pc \hangafter=1 compound patterns 31
+\hangindent=3pc \hangafter=1 compound patterns (复合模式) 31
 
-\hangindent=3pc \hangafter=1 computation of base-10 logarithm 39
+\hangindent=3pc \hangafter=1 computation of base-10 logarithm (计算以 10
+为底的对数) 39
 
-\hangindent=3pc \hangafter=1 computation of $e$ 39
+\hangindent=3pc \hangafter=1 computation of $e$ (计算 $e$) 39
 
 \hangindent=3pc \hangafter=1 computation of $\pi$ 39
 
