review to page 167/210, part of chapter Seven.

--- a/latex_src/experiments_with_algorithms.tex
+++ b/latex_src/experiments_with_algorithms.tex
@@ -563,8 +563,8 @@ J. W. J. Williams 和 R. W. Floyd 在 60 年代早期提出.
 \end{tikzpicture}
 \end{center}
 
-堆具有两条非常重要的性质. 第一条性质是, 如果有 \textit{n} 个结点, 那么所
-有的从根结点到叶子结点的路径长度都不会大于 $\log_2 n$. 第二条性质是,
+堆具有两个非常重要的特性. 第一个特性是, 如果有 \textit{n} 个结点, 那么所
+有的从根结点到叶子结点的路径长度都不会大于 $\log_2 n$. 第二个特性是,
 具有最大值的元素总是在根结点 (这个位置称为 ``堆顶'').
 
 如果我们用一个数组 \texttt{A} 来模拟堆, 那么就不需要构造显式的二叉树.
@@ -758,7 +758,7 @@ J. W. J. Williams 和 R. W. Floyd 在 60 年代早期提出.
 \end{awkcode}
 
 \cterm{性能}. \verb'hsort' 总的操作次数正比于 $n\log n$, 即使是在最坏的
-情况下也是如此. 同样, 我们用三种类型的元素序列对 \verb'hsort' 进行性能
+情况下也是如此. 同样, 我们用三种类型的序列对 \verb'hsort' 进行性能
 测试, 下面这张图显示了测试结果, 可以看到, \verb'hsort' 面对相同元素序列
 时, 性能优于快速排序.
 \marginpar{166}
