--- a/latex_src/index.tex
+++ b/latex_src/index.tex
@@ -37,7 +37,7 @@
 
 \hangindent=3pc \hangafter=1 \verb'?:' conditional expression (条件表达式) 37, 68
 
-\hangindent=3pc \hangafter=1 \verb',' continuation after (继续) 22, 188
+\hangindent=3pc \hangafter=1 \verb',' continuation after (延续) 22, 188
 
 \hangindent=3pc \hangafter=1 \verb'--' decrement operator (自减运算符) 39, 70, 112
 
@@ -485,200 +485,220 @@ v, 181, 184, 186
 
 \hangindent=3pc \hangafter=1 computation of $e$ (计算 $e$) 39
 
-\hangindent=3pc \hangafter=1 computation of $\pi$ 39
+\hangindent=3pc \hangafter=1 computation of $\pi$ (计算 $\pi$) 39
 
-\hangindent=3pc \hangafter=1 concatenation in regular expression 29
+\hangindent=3pc \hangafter=1 concatenation in regular expression
+(正则表达式的拼接) 29
 
-\hangindent=3pc \hangafter=1 concatenation operator 40, 43, 182
+\hangindent=3pc \hangafter=1 concatenation operator (拼接运算符) 40, 43, 182
 
-\hangindent=3pc \hangafter=1 concatenation, string 13,40,43, 47, 56, 101, 182, 184
+\hangindent=3pc \hangafter=1 concatenation, string (字符串拼接) 13,40,43, 47, 56, 101, 182, 184
 
-\hangindent=3pc \hangafter=1 conditional expression, \verb'?:' 37, 68
+\hangindent=3pc \hangafter=1 conditional expression, \verb'?:' (条件表达式) 37, 68
 
-\hangindent=3pc \hangafter=1 constant, \verb'"'...\verb'"' string 7, 24, 35, 51
+\hangindent=3pc \hangafter=1 constant, \verb'"'...\verb'"' string
+(字符串常量) 7, 24, 35, 51
 
-\hangindent=3pc \hangafter=1 constant, numeric 35
+\hangindent=3pc \hangafter=1 constant, numeric (数值常量) 35
 
-\hangindent=3pc \hangafter=1 constraint graph 170
+\hangindent=3pc \hangafter=1 constraint graph (约束关系图) 170
 
-\hangindent=3pc \hangafter=1 context-free grammar 113,145, 148
+\hangindent=3pc \hangafter=1 context-free grammar (上下文无关语法) 113,145, 148
 
-\hangindent=3pc \hangafter=1 continuation after , 22, 188
+\hangindent=3pc \hangafter=1 continuation after \verb',' (延续) 22, 188
 
-\hangindent=3pc \hangafter=1 \verb'continue' statement 49
+\hangindent=3pc \hangafter=1 \verb'continue' statement (\verb'continue'
+语句) 49
 
-\hangindent=3pc \hangafter=1 continuing long statements 15, 22, 188
+\hangindent=3pc \hangafter=1 continuing long statements (延续长语句) 15, 22, 188
 
-\hangindent=3pc \hangafter=1 control-break program 92, 95, 105, 110,126
+\hangindent=3pc \hangafter=1 control-break program (control-break 程序) 92, 95, 105, 110,126
 
-\hangindent=3pc \hangafter=1 control-flow statements, summary of 48
+\hangindent=3pc \hangafter=1 control-flow statements, summary of
+(流程控制语句的总结) 48
 
-\hangindent=3pc \hangafter=1 conversion, \verb'%' format 42, 189
+\hangindent=3pc \hangafter=1 conversion, \verb'%' format (格式转换) 42, 189
 
-\hangindent=3pc \hangafter=1 conversion, date 72, 194
+\hangindent=3pc \hangafter=1 conversion, date (日期的转换) 72, 194
 
-\hangindent=3pc \hangafter=1 conversion, number to string 35, 44, 192
+\hangindent=3pc \hangafter=1 conversion, number to string
+(数值到字符串的转换) 35, 44, 192
 
-\hangindent=3pc \hangafter=1 conversion, string to number 35, 44, 192
+\hangindent=3pc \hangafter=1 conversion, string to number
+(字符串到数值的转换) 35, 44, 192
 
-\hangindent=3pc \hangafter=1 convert numbers to words 76
+\hangindent=3pc \hangafter=1 convert numbers to words (数值转换成单词) 76
 
-\hangindent=3pc \hangafter=1 \verb'cos' function 39
+\hangindent=3pc \hangafter=1 \verb'cos' function (函数 \verb'cos') 39
 
-\hangindent=3pc \hangafter=1 cost of array reference 184, 204
+\hangindent=3pc \hangafter=1 cost of array reference (数组引用的开销) 184, 204
 
-\hangindent=3pc \hangafter=1 \verb'countries' file 22
+\hangindent=3pc \hangafter=1 \verb'countries' file (文件 \verb'countries') 22
 
 \hangindent=3pc \hangafter=1 Cowlishaw, M. F. 186
 
-\hangindent=3pc \hangafter=1 cross-reference checking 73
+\hangindent=3pc \hangafter=1 cross-reference checking (交叉引用检查) 73
 
-\hangindent=3pc \hangafter=1 cross-references in manuscripts 120
+\hangindent=3pc \hangafter=1 cross-references in manuscripts
+(手稿的交叉引用) 120
 
-\hangindent=3pc \hangafter=1 cycle, graph 171, 173-174, 177
+\hangindent=3pc \hangafter=1 cycle, graph (图中的环) 171, 173-174, 177
 
 \hangindent=3pc \hangafter=1 Dallen, J. A. 152
 
-\hangindent=3pc \hangafter=1 data, name-value 86
+\hangindent=3pc \hangafter=1 data, name-value (\mbox{名字}-值) 86
 
-\hangindent=3pc \hangafter=1 data, regular expressions in 118
+\hangindent=3pc \hangafter=1 data, regular expressions in
+(带有正则表达式的数据) 118
 
-\hangindent=3pc \hangafter=1 data, self-identifying 86
+\hangindent=3pc \hangafter=1 data, self-identifying (自描述数据) 86
 
-\hangindent=3pc \hangafter=1 data structure, successor-list 171
+\hangindent=3pc \hangafter=1 data structure, successor-list (后继节点列表) 171
 
-\hangindent=3pc \hangafter=1 data types 5
+\hangindent=3pc \hangafter=1 data types (数据类型) 5
 
-\hangindent=3pc \hangafter=1 data validation 10, 76
+\hangindent=3pc \hangafter=1 data validation (数据验证) 10, 76
 
-\hangindent=3pc \hangafter=1 database attribute 103
+\hangindent=3pc \hangafter=1 database attribute (数据库中的属性) 103
 
-\hangindent=3pc \hangafter=1 database description, \verb'relflle' 106
+\hangindent=3pc \hangafter=1 database description (数据库描述文件) ,
+\verb'relflle' 106
 
-\hangindent=3pc \hangafter=1 database, multifile 102
+\hangindent=3pc \hangafter=1 database, multifile (多文件数据库) 102
 
-\hangindent=3pc \hangafter=1 database query 99
+\hangindent=3pc \hangafter=1 database query (数据库查询) 99
 
-\hangindent=3pc \hangafter=1 database table 103
+\hangindent=3pc \hangafter=1 database table (数据库表格) 103
 
-\hangindent=3pc \hangafter=1 databases, relational iv, 102
+\hangindent=3pc \hangafter=1 databases, relational (关系数据库) iv, 102
 
 
-\hangindent=3pc \hangafter=1 \verb'date' command 62, 76
+\hangindent=3pc \hangafter=1 \verb'date' command (命令 \verb'date') 62, 76
 
-\hangindent=3pc \hangafter=1 date conversion 72, 194
+\hangindent=3pc \hangafter=1 date conversion (数据转换) 72, 194
 
-\hangindent=3pc \hangafter=1 dates, sorting 72
+\hangindent=3pc \hangafter=1 dates, sorting (日期排序) 72
 
-\hangindent=3pc \hangafter=1 \verb'daynum' function 194
+\hangindent=3pc \hangafter=1 \verb'daynum' function (函数 \verb'daynum') 194
 
-\hangindent=3pc \hangafter=1 decrement operator, \verb'--' 39, 70, 112
+\hangindent=3pc \hangafter=1 decrement operator, \verb'--' (自减运算符) 39, 70, 112
 
-\hangindent=3pc \hangafter=1 default action 5, 9, 21, 187
+\hangindent=3pc \hangafter=1 default action (默认动作) 5, 9, 21, 187
 
-\hangindent=3pc \hangafter=1 default field separator 5, 24
+\hangindent=3pc \hangafter=1 default field separator (默认的字段分隔符) 5, 24
 
-\hangindent=3pc \hangafter=1 default initialization 12-13, 35, 38,45,50-51,54,68, 181
+\hangindent=3pc \hangafter=1 default initialization (默认的初始化) 12-13, 35, 38,45,50-51,54,68, 181
 
-\hangindent=3pc \hangafter=1 \verb'delete' statement 52
+\hangindent=3pc \hangafter=1 \verb'delete' statement (\verb'delete' 语句) 52
 
-\hangindent=3pc \hangafter=1 delimiters, balanced 77, 195
+\hangindent=3pc \hangafter=1 delimiters, balanced (均衡的分隔符) 77, 195
 
-\hangindent=3pc \hangafter=1 dependency description, \verb'makefile' 175
+\hangindent=3pc \hangafter=1 dependency description, \verb'makefile'
+(\verb'makefile' 的依赖关系描述) 175
 
-\hangindent=3pc \hangafter=1 dependency graph 176
+\hangindent=3pc \hangafter=1 dependency graph (依赖关系图) 176
 
-\hangindent=3pc \hangafter=1 depth-first search algorithm 172, 177
+\hangindent=3pc \hangafter=1 depth-first search algorithm (深度优先搜索) 172, 177
 
-\hangindent=3pc \hangafter=1 derived table 106
+\hangindent=3pc \hangafter=1 derived table (导出表) 106
 
-\hangindent=3pc \hangafter=1 \verb'dfs' function 173
+\hangindent=3pc \hangafter=1 \verb'dfs' function (函数 \verb'dfs') 173
 
-\hangindent=3pc \hangafter=1 divide and conquer v, 89, 110, 121, 123-124, 130, 160, 184, 202
+\hangindent=3pc \hangafter=1 divide and conquer (分而治之) v, 89, 110, 121, 123-124, 130, 160, 184, 202
 
-\hangindent=3pc \hangafter=1 \verb'do' statement 49
+\hangindent=3pc \hangafter=1 \verb'do' statement (\verb'do' 语句) 49
 
-\hangindent=3pc \hangafter=1 dynamic regular expression 40,  101, 184
+\hangindent=3pc \hangafter=1 dynamic regular expression (动态的正则表达式) 40,  101, 184
 
-\hangindent=3pc \hangafter=1 $e$, computation of 39
+\hangindent=3pc \hangafter=1 $e$, computation of (计算 $e$) 39
 
-\hangindent=3pc \hangafter=1 \verb'echo' program 63
+\hangindent=3pc \hangafter=1 \verb'echo' program (程序 \verb'echo') 63
 
-\hangindent=3pc \hangafter=1 \verb'egrep' command 59,181,184, 186
+\hangindent=3pc \hangafter=1 \verb'egrep' command (命令 \verb'egrep') 59,181,184, 186
 
-\hangindent=3pc \hangafter=1 \verb'else', semicolon before 47
+\hangindent=3pc \hangafter=1 \verb'else', semicolon before (\verb'else'
+前面的分号) 47
 
-\hangindent=3pc \hangafter=1 \verb'emp.data' file 1
+\hangindent=3pc \hangafter=1 \verb'emp.data' file (文件 \verb'emp.data') 1
 
-\hangindent=3pc \hangafter=1 empty statement 50,188
+\hangindent=3pc \hangafter=1 empty statement (空语句) 50,188
 
-\hangindent=3pc \hangafter=1 \verb'END', multiple \verb'BEGIN' and 23, 169
+\hangindent=3pc \hangafter=1 \verb'END', multiple \verb'BEGIN' and (多个
+\verb'END' 与 \verb'BEGIN') 23, 169
 
-\hangindent=3pc \hangafter=1 end of input, \verb'$0' at 13
+\hangindent=3pc \hangafter=1 end of input, \verb'$0' at (输入结束时的
+\verb'$0') 13
 
-\hangindent=3pc \hangafter=1 \verb'END' pattern 11,23,49
+\hangindent=3pc \hangafter=1 \verb'END' pattern (\verb'END' 模式) 11, 23, 49
 
-\hangindent=3pc \hangafter=1 error file, standard 59
+\hangindent=3pc \hangafter=1 error file, standard (标准错误文件) 59
 
-\hangindent=3pc \hangafter=1 \verb'error' function 118, 149, 178
+\hangindent=3pc \hangafter=1 \verb'error' function (函数 \verb'error')
+118, 149, 178
 
-\hangindent=3pc \hangafter=1 error messages, printing 59
+\hangindent=3pc \hangafter=1 error messages, printing (打印的错误信息) 59
 
-\hangindent=3pc \hangafter=1 error, syntax 4
+\hangindent=3pc \hangafter=1 error, syntax (语法的错误) 4
 
-\hangindent=3pc \hangafter=1 escape sequence 31, 35, 191
+\hangindent=3pc \hangafter=1 escape sequence (转义序列) 31, 35, 191
 
-\hangindent=3pc \hangafter=1 escape sequences, table of 31
+\hangindent=3pc \hangafter=1 escape sequences, table of (转义序列表格) 31
 
-\hangindent=3pc \hangafter=1 examples, regular expression 30
+\hangindent=3pc \hangafter=1 examples, regular expression (正则表达式的例子) 30
 
-\hangindent=3pc \hangafter=1 examples, table of \verb'printf' 57
+\hangindent=3pc \hangafter=1 examples, table of \verb'printf'
+(\verb'printf' 的例子) 57
 
-\hangindent=3pc \hangafter=1 executable file 65
+\hangindent=3pc \hangafter=1 executable file (可执行文件) 65
 
-\hangindent=3pc \hangafter=1 \verb'exit' statement 49
+\hangindent=3pc \hangafter=1 \verb'exit' statement (\verb'exit' 语句) 49
 
-\hangindent=3pc \hangafter=1 exit status 50, 64
+\hangindent=3pc \hangafter=1 exit status (退出状态) 50, 64
 
-\hangindent=3pc \hangafter=1 \verb'exp' function 39
+\hangindent=3pc \hangafter=1 \verb'exp' function (函数 \verb'exp') 39
 
-\hangindent=3pc \hangafter=1 exponential notation 35
+\hangindent=3pc \hangafter=1 exponential notation (指数的记号) 35
 
-\hangindent=3pc \hangafter=1 exponentiation operator, \verb'^' 15, 36, 46
+\hangindent=3pc \hangafter=1 exponentiation operator, \verb'^' (指数运算符)
+15, 36, 46
 
-\hangindent=3pc \hangafter=1 expression, \verb'?:' conditional 37, 68
+\hangindent=3pc \hangafter=1 expression, \verb'?:' conditional (条件表达式)
+37, 68
 
-\hangindent=3pc \hangafter=1 expression, assignment 39, 127
+\hangindent=3pc \hangafter=1 expression, assignment (赋值表达式) 39, 127
 
-\hangindent=3pc \hangafter=1 expression grammar 145
+\hangindent=3pc \hangafter=1 expression grammar (表达式语法) 145
 
-\hangindent=3pc \hangafter=1 expression, value of comparison 37
+\hangindent=3pc \hangafter=1 expression, value of comparison (比较表达式的值) 37
 
-\hangindent=3pc \hangafter=1 expression, value of logical 37
+\hangindent=3pc \hangafter=1 expression, value of logical (逻辑表达式的值) 37
 
-\hangindent=3pc \hangafter=1 expressions, field 36
+\hangindent=3pc \hangafter=1 expressions, field (字段) 36
 
-\hangindent=3pc \hangafter=1 expressions, primary 34
+\hangindent=3pc \hangafter=1 expressions, primary (主表达式) 34
 
-\hangindent=3pc \hangafter=1 expressions, summary of 37
+\hangindent=3pc \hangafter=1 expressions, summary of (表达式的总结) 37
 
 \hangindent=3pc \hangafter=1 Feldman,S. I. 179
 
-\hangindent=3pc \hangafter=1 field expressions 36
+\hangindent=3pc \hangafter=1 field expressions (字段表达式) 36
 
-\hangindent=3pc \hangafter=1 field, \verb'$'$n$ 5, 35
+\hangindent=3pc \hangafter=1 field, \verb'$'$n$ (字段 \verb'$'$n$) 5, 35
 
-\hangindent=3pc \hangafter=1 field, nonexistent 36,45, 192
+\hangindent=3pc \hangafter=1 field, nonexistent (不存在的字段) 36,45, 192
 
-\hangindent=3pc \hangafter=1 \verb'field' program 66
+\hangindent=3pc \hangafter=1 \verb'field' program (程序 \verb'field') 66
 
-\hangindent=3pc \hangafter=1 field separator, default 5, 24
+\hangindent=3pc \hangafter=1 field separator, default (默认的字段分隔符) 5, 24
 
-\hangindent=3pc \hangafter=1 field separator, input 24, 35, 39, 60
+\hangindent=3pc \hangafter=1 field separator, input (输入数据的字段分隔符)
+24, 35, 39, 60
 
-\hangindent=3pc \hangafter=1 field separator, newline as 61, 83-84
+\hangindent=3pc \hangafter=1 field separator, newline as
+(换行符作为字段分隔符) 61, 83-84
 
-\hangindent=3pc \hangafter=1 field separator, output 6, 35, 39, 55-56
+\hangindent=3pc \hangafter=1 field separator, output (输出数据的字段分隔符)
+6, 35, 39, 55-56
 
 % \hangindent=3pc \hangafter=1 \marginpar{207}
 \hangindent=3pc \hangafter=1 field separator, regular expression 52, 60, 80, 135
