--- a/latex_src/index.tex
+++ b/latex_src/index.tex
@@ -807,7 +807,7 @@
 
 \hangindent=3pc \hangafter=1 function, \verb'unget' 105
 
-\hangindent=3pc \hangafter=1 function with counters, isort 158
+\hangindent=3pc \hangafter=1 function with counters, \verb'isort' 158
 
 \hangindent=3pc \hangafter=1 function, summary of arithmetic 190
 
