--- a/latex_src/index.tex
+++ b/latex_src/index.tex
@@ -701,193 +701,216 @@ v, 181, 184, 186
 6, 35, 39, 55-56
 
 % \hangindent=3pc \hangafter=1 \marginpar{207}
-\hangindent=3pc \hangafter=1 field separator, regular expression 52, 60, 80, 135
+\hangindent=3pc \hangafter=1 field separator, regular expression
+(用正则表达式作字段分隔符) 52, 60, 80, 135
 
-\hangindent=3pc \hangafter=1 field variables 35
+\hangindent=3pc \hangafter=1 field variables (字段变量) 35
 
-\hangindent=3pc \hangafter=1 fields, named 102, 107
+\hangindent=3pc \hangafter=1 fields, named (命名的字段) 102, 107
 
-\hangindent=3pc \hangafter=1 file, \verb'capitals' 102
+\hangindent=3pc \hangafter=1 file, \verb'capitals' (文件 \verb'capitals') 102
 
-\hangindent=3pc \hangafter=1 file, \verb'countries' 22
+\hangindent=3pc \hangafter=1 file, \verb'countries' (文件 \verb'countries') 22
 
-\hangindent=3pc \hangafter=1 file, \verb'/dev/tty' 59
+\hangindent=3pc \hangafter=1 file, \verb'/dev/tty' (文件 \verb'/dev/tty') 59
 
-\hangindent=3pc \hangafter=1 file, \verb'emp.data' 1
+\hangindent=3pc \hangafter=1 file, \verb'emp.data' (文件 \verb'emp.data') 1
 
-\hangindent=3pc \hangafter=1 file, executable 65
+\hangindent=3pc \hangafter=1 file, executable (可执行文件) 65
 
-\hangindent=3pc \hangafter=1 file, standard error 59
+\hangindent=3pc \hangafter=1 file, standard error (标准错误文件) 59
 
-\hangindent=3pc \hangafter=1 file, standard input 59, 66
+\hangindent=3pc \hangafter=1 file, standard input (标准输入文件) 59, 66
 
-\hangindent=3pc \hangafter=1 file, standard output 5, 56
+\hangindent=3pc \hangafter=1 file, standard output (标准输出文件) 5, 56
 
-\hangindent=3pc \hangafter=1 file updating 175
+\hangindent=3pc \hangafter=1 file updating (文件更新) 175
 
-\hangindent=3pc \hangafter=1 filename, \verb'-' standard input 64, 116
+\hangindent=3pc \hangafter=1 filename, \verb'-' standard input
+(标准输入的文件名) 64, 116
 
-\hangindent=3pc \hangafter=1 \verb'FILENAME' variable 33, 35-36, 81, 103
+\hangindent=3pc \hangafter=1 \verb'FILENAME' variable (变量
+\verb'FILENAME') 33, 35-36, 81, 103
 
-\hangindent=3pc \hangafter=1 fixed-field input 72
+\hangindent=3pc \hangafter=1 fixed-field input (字段固定的输入) 72
 
-\hangindent=3pc \hangafter=1 floating-point number, regular expression for 30, 40
+\hangindent=3pc \hangafter=1 floating-point number, regular expression for
+(浮点数的正则表达式) 30, 40
 
-\hangindent=3pc \hangafter=1 floating-point precision 35, 191
+\hangindent=3pc \hangafter=1 floating-point precision (浮点数精度) 35, 191
 
 \hangindent=3pc \hangafter=1 Floyd, R. W. 162, 198
 
-\hangindent=3pc \hangafter=1 \verb'fmt' program 120
+\hangindent=3pc \hangafter=1 \verb'fmt' program (程序 \verb'fmt') 120
 
-\hangindent=3pc \hangafter=1 \verb'fmt.just' program 202
+\hangindent=3pc \hangafter=1 \verb'fmt.just' program (程序 \verb'fmt.just') 202
 
-\hangindent=3pc \hangafter=1 \verb'FNR' variable 33, 35-36, 61
+\hangindent=3pc \hangafter=1 \verb'FNR' variable (变量 \verb'FNR') 33, 35-36, 61
 
-\hangindent=3pc \hangafter=1 \verb'for' ... \verb'in' statement 51
+\hangindent=3pc \hangafter=1 \verb'for' ... \verb'in' statement (\verb'for'
+... \verb'in' 语句) 51
 
-\hangindent=3pc \hangafter=1 \verb'for(;;)' infinite loop 49, 113
+\hangindent=3pc \hangafter=1 \verb'for(;;)' infinite loop (无限循环) 49, 113
 
-\hangindent=3pc \hangafter=1 \verb'for' statement 16, 49
+\hangindent=3pc \hangafter=1 \verb'for' statement (\verb'for' 语句) 16, 49
 
-\hangindent=3pc \hangafter=1 form letters 100
+\hangindent=3pc \hangafter=1 form letters (套用信函) 100
 
-\hangindent=3pc \hangafter=1 form of awk program 2, 21, 187
+\hangindent=3pc \hangafter=1 form of awk program (awk 程序的形式) 2, 21, 187
 
-\hangindent=3pc \hangafter=1 \verb'form1' program 91
+\hangindent=3pc \hangafter=1 \verb'form1' program (程序 \verb'form1') 91
 
-\hangindent=3pc \hangafter=1 \verb'form2' program 92
+\hangindent=3pc \hangafter=1 \verb'form2' program (程序 \verb'form2') 92
 
-\hangindent=3pc \hangafter=1 \verb'form3' program 94
+\hangindent=3pc \hangafter=1 \verb'form3' program (程序 \verb'form3') 94
 
-\hangindent=3pc \hangafter=1 \verb'form4' program 96
+\hangindent=3pc \hangafter=1 \verb'form4' program (程序 \verb'form4') 96
 
-\hangindent=3pc \hangafter=1 formal parameters 54
+\hangindent=3pc \hangafter=1 formal parameters (形式参数) 54
 
-\hangindent=3pc \hangafter=1 format, program 11, 22, 34, 47, 53, 188
+\hangindent=3pc \hangafter=1 format, program (程序的格式)
+11, 22, 34, 47, 53, 188
 
-\hangindent=3pc \hangafter=1 formatting, table 95
+\hangindent=3pc \hangafter=1 formatting, table (表格的格式化) 95
 
-\hangindent=3pc \hangafter=1 \verb'form.gen' program 101
+\hangindent=3pc \hangafter=1 \verb'form.gen' program (程序 \verb'form.gen') 101
 
-\hangindent=3pc \hangafter=1 Forth language 142
+\hangindent=3pc \hangafter=1 Forth language (Forth 编程语言) 142
 
 \hangindent=3pc \hangafter=1 Fraser, C. W. vi
 
-\hangindent=3pc \hangafter=1 \verb'FS' variable 24, 35-36, 52, 60, 83, 135, 187
+\hangindent=3pc \hangafter=1 \verb'FS' variable (变量 \verb'FS')
+24, 35-36, 52, 60, 83, 135, 187
 
-\hangindent=3pc \hangafter=1 function arguments 54
+\hangindent=3pc \hangafter=1 function arguments (函数参数) 54
 
-\hangindent=3pc \hangafter=1 function, \verb'asplit' 81
+\hangindent=3pc \hangafter=1 function, \verb'asplit' (函数 \verb'asplit') 81
 
-\hangindent=3pc \hangafter=1 function, \verb'atan2' 39
+\hangindent=3pc \hangafter=1 function, \verb'atan2' (函数 \verb'atan2') 39
 
-\hangindent=3pc \hangafter=1 function, \verb'check' 155
+\hangindent=3pc \hangafter=1 function, \verb'check' (函数 \verb'check') 155
 
-\hangindent=3pc \hangafter=1 function, \verb'choose' 112
+\hangindent=3pc \hangafter=1 function, \verb'choose' (函数 \verb'choose') 112
 
-\hangindent=3pc \hangafter=1 function, \verb'cos' 39
+\hangindent=3pc \hangafter=1 function, \verb'cos' (函数 \verb'cos') 39
 
-\hangindent=3pc \hangafter=1 function, \verb'daynum' 194
+\hangindent=3pc \hangafter=1 function, \verb'daynum' (函数 \verb'daynum') 194
 
-\hangindent=3pc \hangafter=1 function definition 53, 187
+\hangindent=3pc \hangafter=1 function definition (函数定义) 53, 187
 
-\hangindent=3pc \hangafter=1 function, \verb'dfs' 173
+\hangindent=3pc \hangafter=1 function, \verb'dfs' (函数 \verb'dfs') 173
 
-\hangindent=3pc \hangafter=1 function, \verb'error' 118, 149, 178
+\hangindent=3pc \hangafter=1 function, \verb'error' (函数 \verb'error')
+118, 149, 178
 
-\hangindent=3pc \hangafter=1 function, \verb'exp' 39
+\hangindent=3pc \hangafter=1 function, \verb'exp' (函数 \verb'exp') 39
 
 \hangindent=3pc \hangafter=1 function, \verb'getline' 61, 182, 188
 
-\hangindent=3pc \hangafter=1 function, \verb'gsub' 42, 71, 101, 119, 122, 182
+\hangindent=3pc \hangafter=1 function, \verb'gsub' (函数 \verb'gsub')
+42, 71, 101, 119, 122, 182
 
-\hangindent=3pc \hangafter=1 function, \verb'heapify' 163, 165
+\hangindent=3pc \hangafter=1 function, \verb'heapify' (函数 \verb'heapify')
+163, 165
 
-\hangindent=3pc \hangafter=1 function, \verb'hsort' 165
+\hangindent=3pc \hangafter=1 function, \verb'hsort' (函数 \verb'hsort') 165
 
-\hangindent=3pc \hangafter=1 function, \verb'index' 41
+\hangindent=3pc \hangafter=1 function, \verb'index' (函数 \verb'index') 41
 
-\hangindent=3pc \hangafter=1 function, \verb'int' 39-40
+\hangindent=3pc \hangafter=1 function, \verb'int' (函数 \verb'int') 39-40
 
-\hangindent=3pc \hangafter=1 function, \verb'isort' 154
+\hangindent=3pc \hangafter=1 function, \verb'isort' (函数 \verb'isort') 154
 
-\hangindent=3pc \hangafter=1 function, \verb'length' 13-14
+\hangindent=3pc \hangafter=1 function, \verb'length' (函数 \verb'length') 13-14
 
-\hangindent=3pc \hangafter=1 function, \verb'log' 39
+\hangindent=3pc \hangafter=1 function, \verb'log' (函数 \verb'log') 39
 
-\hangindent=3pc \hangafter=1 function, \verb'match' 35, 41, 149, 182, 189, 196
+\hangindent=3pc \hangafter=1 function, \verb'match' (函数 \verb'match')
+35, 41, 149, 182, 189, 196
 
-\hangindent=3pc \hangafter=1 function, \verb'max' 53
+\hangindent=3pc \hangafter=1 function, \verb'max' (函数 \verb'max') 53
 
-\hangindent=3pc \hangafter=1 function, \verb'numtowords' 76, 194
+\hangindent=3pc \hangafter=1 function, \verb'numtowords' (函数
+\verb'numtowords') 76, 194
 
-\hangindent=3pc \hangafter=1 function, \verb'permute' 199
+\hangindent=3pc \hangafter=1 function, \verb'permute' (函数 \verb'permute') 199
 
-\hangindent=3pc \hangafter=1 function, \verb'prefix' 105
+\hangindent=3pc \hangafter=1 function, \verb'prefix' (函数 \verb'prefix') 105
 
-\hangindent=3pc \hangafter=1 function, \verb'qsort' 161
+\hangindent=3pc \hangafter=1 function, \verb'qsort' (函数 \verb'qsort') 161
 
-\hangindent=3pc \hangafter=1 function, \verb'rand' 40, 111
+\hangindent=3pc \hangafter=1 function, \verb'rand' (函数 \verb'rand') 40, 111
 
-\hangindent=3pc \hangafter=1 function, \verb'randint' 111
+\hangindent=3pc \hangafter=1 function, \verb'randint' (函数 \verb'randint') 111
 
-\hangindent=3pc \hangafter=1 function, \verb'randlet' 112
+\hangindent=3pc \hangafter=1 function, \verb'randlet' (函数 \verb'randlet') 112
 
-\hangindent=3pc \hangafter=1 function, \verb'recursive' 54, 71, 76, 115, 160
+\hangindent=3pc \hangafter=1 function, \verb'recursive' (函数 \verb'recursive')
+54, 71, 76, 115, 160
 
-\hangindent=3pc \hangafter=1 function, \verb'sin' 39
+\hangindent=3pc \hangafter=1 function, \verb'sin' (函数 \verb'sin') 39
 
-\hangindent=3pc \hangafter=1 function, \verb'split' 41, 52-53, 76, 80, 84, 192
+\hangindent=3pc \hangafter=1 function, \verb'split' (函数 \verb'split')
+41, 52-53, 76, 80, 84, 192
 
-\hangindent=3pc \hangafter=1 function, \verb'sprintf' 42, 76, 88, 189
+\hangindent=3pc \hangafter=1 function, \verb'sprintf' (函数 \verb'sprintf')
+42, 76, 88, 189
 
-\hangindent=3pc \hangafter=1 function, \verb'sqrt' 39
+\hangindent=3pc \hangafter=1 function, \verb'sqrt' (函数 \verb'sqrt') 39
 
-\hangindent=3pc \hangafter=1 function, \verb'srand' 40, 111
+\hangindent=3pc \hangafter=1 function, \verb'srand' (函数 \verb'srand') 40, 111
 
-\hangindent=3pc \hangafter=1 function, \verb'sub' 42, 182
+\hangindent=3pc \hangafter=1 function, \verb'sub' (函数 \verb'sub') 42, 182
 
-\hangindent=3pc \hangafter=1 function, \verb'subset' 109
+\hangindent=3pc \hangafter=1 function, \verb'subset' (函数 \verb'subset') 109
 
-\hangindent=3pc \hangafter=1 function, \verb'substr' 43, 72
+\hangindent=3pc \hangafter=1 function, \verb'substr' (函数 \verb'substr') 43, 72
 
-\hangindent=3pc \hangafter=1 function, \verb'suffix' 105
+\hangindent=3pc \hangafter=1 function, \verb'suffix' (函数 \verb'suffix') 105
 
-\hangindent=3pc \hangafter=1 function, \verb'system' 59, 64
+\hangindent=3pc \hangafter=1 function, \verb'system' (函数 \verb'system') 59, 64
 
-\hangindent=3pc \hangafter=1 function, \verb'unget' 105
+\hangindent=3pc \hangafter=1 function, \verb'unget' (函数 \verb'unget') 105
 
-\hangindent=3pc \hangafter=1 function with counters, isort 158
+\hangindent=3pc \hangafter=1 function with counters, \verb'isort'
+(带有计数语句的 \verb'isort') 158
 
-\hangindent=3pc \hangafter=1 function, summary of arithmetic 190
+\hangindent=3pc \hangafter=1 function, summary of arithmetic (算术函数总结) 190
 
-\hangindent=3pc \hangafter=1 function, summary of string 190
+\hangindent=3pc \hangafter=1 function, summary of string (字符串函数总结) 190
 
-\hangindent=3pc \hangafter=1 function, table of arithmetic 39
+\hangindent=3pc \hangafter=1 function, table of arithmetic (算术函数表格) 39
 
-\hangindent=3pc \hangafter=1 function, table of string 42
+\hangindent=3pc \hangafter=1 function, table of string (字符串函数表格) 42
 
-\hangindent=3pc \hangafter=1 function, user-defined 53, 182, 187
+\hangindent=3pc \hangafter=1 function, user-defined (用户自定义函数) 53, 182, 187
 
-\hangindent=3pc \hangafter=1 generation, program v, 79, 121, 167
+\hangindent=3pc \hangafter=1 generation, program (程序的生成) v, 79, 121, 167
 
-\hangindent=3pc \hangafter=1 generator, \verb'lex' lexical analyzer 152, 181, 186
+\hangindent=3pc \hangafter=1 generator, \verb'lex' lexical analyzer
+(\verb'lex' 的词法分析器) 152, 181, 186
 
-\hangindent=3pc \hangafter=1 generator, \verb'yacc' parser 152, 175
+\hangindent=3pc \hangafter=1 generator, \verb'yacc' parser (\verb'yacc'
+语法分析器) 152, 175
 
-\hangindent=3pc \hangafter=1 \verb'getline' error return 61-62
+\hangindent=3pc \hangafter=1 \verb'getline' error return (\verb'getline'
+的错误返回值) 61-62
 
-\hangindent=3pc \hangafter=1 \verb'getline' forms, table of 62
+\hangindent=3pc \hangafter=1 \verb'getline' forms, table of (\verb'getline'
+的形式) 62
 
-\hangindent=3pc \hangafter=1 \verb'getline' function 61, 182, 188
+\hangindent=3pc \hangafter=1 \verb'getline' function (函数 \verb'getline')
+61, 182, 188
 
-\hangindent=3pc \hangafter=1 \verb'getline', side-effects of 61
+\hangindent=3pc \hangafter=1 \verb'getline', side-effects of
+(\verb'getline' 的副作用) 61
 
-\hangindent=3pc \hangafter=1 global variables 54, 116
+\hangindent=3pc \hangafter=1 global variables (全局变量) 54, 116
 
-\hangindent=3pc \hangafter=1 grammar, arithmetic expression 145
+\hangindent=3pc \hangafter=1 grammar, arithmetic expression
+(算术表达式的语法) 145
 
-\hangindent=3pc \hangafter=1 grammar, awk 148
+\hangindent=3pc \hangafter=1 grammar, awk (awk 的语法) 148
 
 \hangindent=3pc \hangafter=1 grammar, contex-free 113, 145, 148
 
