添加一个 FIXME 注释

--- a/latex_src/index.tex
+++ b/latex_src/index.tex
@@ -865,6 +865,7 @@
 
 \hangindent=3pc \hangafter=1 Gusella, R. vi
 
+% FIXME 应该是个错误
 \hangindent=3pc \hangafter=1 happiness 30
 
 \hangindent=3pc \hangafter=1 Hardin, R. H. 130
